# build-tools

./: .gitignore  .markdownlint.yaml  CONTRIBUTING.md  README.md
semantic-conventions/: .flake8  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  dev-requirements.txt  mypy.ini  requirements.txt  semconv.schema.json  semconvgen-0.8.0-py3-none-any.whl  setup.cfg  setup.py  syntax.md
semantic-conventions/src/dynatrace/semconv/: main.py  version.py
semantic-conventions/src/dynatrace/semconv/model/: constraints.py  semantic_attribute.py  semantic_convention.py
semantic-conventions/src/dynatrace/semconv/templating/: code.py  markdown.py
semantic-conventions/src/opentelemetry/semconv/: main.py  version.py
semantic-conventions/src/opentelemetry/semconv/model/: constraints.py  exceptions.py  semantic_attribute.py  semantic_convention.py  unit_member.py  utils.py
semantic-conventions/src/opentelemetry/semconv/templating/: code.py  compat.py  compatibility.py  markdown.py
semantic-conventions/src/tests/: conftest.py
semantic-conventions/src/tests/data/: basic_example.md  basic_example.yml
semantic-conventions/src/tests/data/yaml/: attribute_templates.yml  basic_example.yml  cloud.yaml  database.yaml  event.yaml  faas.yaml  general.yaml  http.yaml  http_metrics.yaml  http_metrics_new.yaml  imported-inherited.yaml  links.yaml  metrics.yaml  numeric_attributes.yml  rpc.yaml  scope.yaml  semantic_attributes.yml  semantic_attributes_deprecated.yml  span_event.yaml  stability.yaml
semantic-conventions/src/tests/semconv/model/: test_utils.py  (+5 more)
(+354 files in other folders)
