# Copyright 2019, Dynatrace

[metadata]
name = semconvgen
description = Dynatrace Semantic Convention utility
author = Dynatrace
author_email = giovanni.liva@dynatrace.com
url = https://www.dynatrace.com/
platforms = any
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires =
    dataclasses~=0.6
    ruamel.yaml~=0.16
    Jinja2~=2.11
    mistune==2.0.0a6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gen-semconv = opentelemetry.semconv.main:main
